[gd_scene load_steps=30 format=3 uid="uid://cbdeftm7hb34y"]

[ext_resource type="Script" path="res://scripts/GameState.gd" id="1_boxcs"]
[ext_resource type="Texture2D" uid="uid://egksrxfe65eo" path="res://map.png" id="2_wyddl"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="3_ggh7u"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="5_f8mkt"]
[ext_resource type="Theme" uid="uid://gfe8yonjytoy" path="res://default_theme.tres" id="5_jm235"]
[ext_resource type="Script" path="res://scripts/Weapon.gd" id="6_hc7te"]
[ext_resource type="Texture2D" uid="uid://dpcx5nipciom0" path="res://sprites/PhinoonSmol.png" id="7_0vnl8"]
[ext_resource type="Script" path="res://scripts/Score.gd" id="8_tngyd"]
[ext_resource type="Script" path="res://scripts/GameTime.gd" id="9_w17am"]
[ext_resource type="Texture2D" uid="uid://caq2xtnmvc4cg" path="res://sprites/SpearSmol.png" id="10_20rln"]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id="10_m8a57"]
[ext_resource type="PackedScene" uid="uid://da28es3vlw5qi" path="res://scenes/e_pog.tscn" id="10_mbw4p"]
[ext_resource type="PackedScene" uid="uid://dkmaxy8d1sscl" path="res://scenes/e_bob.tscn" id="10_odwr6"]
[ext_resource type="Texture2D" uid="uid://rh4spei8sj05" path="res://sprites/Smear.png" id="11_f5ox6"]
[ext_resource type="PackedScene" uid="uid://csoliin8k8lj0" path="res://scenes/e_giog.tscn" id="11_ngcgn"]
[ext_resource type="PackedScene" uid="uid://dmy3nmj6kyst2" path="res://scenes/e_shroomba.tscn" id="12_tqki8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xafwk"]
radius = 21.0
height = 168.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6ucjn"]
radius = 221.081

[sub_resource type="Animation" id="Animation_5q5qc"]
length = 0.001

[sub_resource type="Animation" id="Animation_xgv5f"]
resource_name = "stab"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(64, 0), Vector2(120, 30), Vector2(120, 30), Vector2(64, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/WeaponSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 2.0944, 2.0944, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/WeaponSprite/Smear:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.18, 0.2, 1),
"transitions": PackedFloat32Array(1, 0.1, 1, 1, 1e-05),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ps31q"]
_data = {
"RESET": SubResource("Animation_5q5qc"),
"stab": SubResource("Animation_xgv5f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpuvh"]
size = Vector2(11, 199)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrhkh"]
size = Vector2(14, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ecaa"]
size = Vector2(1941.67, 1844.02)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xpk6"]
size = Vector2(2072.12, 1785.59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fmx8"]
size = Vector2(2013.67, 1890.84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2e4q1"]
size = Vector2(1964.86, 1816.19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q47f4"]
size = Vector2(720, 11783)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m67i8"]
size = Vector2(1236, 11783)

[node name="Root" type="Node2D"]

[node name="GameState" type="Node" parent="." node_paths=PackedStringArray("_game_over_panel")]
script = ExtResource("1_boxcs")
_game_over_panel = NodePath("../UI/GameOver")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_wyddl")

[node name="UI" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = -21.0
offset_right = 43.0
offset_bottom = 19.0

[node name="HPBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = -1085.0
offset_top = -850.0
offset_right = 1065.0
offset_bottom = -712.0
theme = ExtResource("5_jm235")
value = 100.0

[node name="Label" type="Label" parent="UI/HPBar"]
z_index = 100
z_as_relative = false
layout_mode = 0
offset_left = 986.0
offset_top = -4.0
offset_right = 1184.0
offset_bottom = 71.0
theme = ExtResource("5_jm235")
text = "Health"
uppercase = true

[node name="GameOver" type="Panel" parent="UI"]
visible = false
z_index = 100
layout_mode = 0
offset_left = -860.0
offset_top = -427.0
offset_right = 864.0
offset_bottom = 467.0
theme = ExtResource("5_jm235")

[node name="Text" type="Label" parent="UI/GameOver"]
z_index = 100
z_as_relative = false
layout_mode = 0
offset_left = 3.0
offset_top = 54.0
offset_right = 1723.0
offset_bottom = 381.0
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Quit" type="Button" parent="UI/GameOver"]
z_index = 100
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 199.0
offset_top = 631.0
offset_right = -1119.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_jm235")
text = "Quit
"

[node name="Retry" type="Button" parent="UI/GameOver"]
z_index = 100
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1055.0
offset_top = 633.0
offset_right = -263.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_jm235")
text = "Retry"

[node name="ScoreLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = -1507.0
offset_top = -803.0
offset_right = -1383.0
offset_bottom = -742.0
theme = ExtResource("5_jm235")
text = "Score:"

[node name="ScoreValue" type="Label" parent="UI/ScoreLabel"]
layout_mode = 0
offset_left = 133.0
offset_right = 253.0
offset_bottom = 61.0
text = "99999
"
script = ExtResource("8_tngyd")

[node name="GameTime" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1238.0
offset_top = -803.0
offset_right = 1362.0
offset_bottom = -742.0
theme = ExtResource("5_jm235")
text = "59:59
"
script = ExtResource("9_w17am")

[node name="Player" type="RigidBody2D" parent="." node_paths=PackedStringArray("_hp_bar", "_attack_timer", "_sprite")]
collision_mask = 10
mass = 0.5
gravity_scale = 0.0
lock_rotation = true
linear_damp = 5.0
script = ExtResource("3_ggh7u")
_speed = 2500.0
_hp_bar = NodePath("../UI/HPBar")
_attack_timer = NodePath("AttackTimer")
_sprite = NodePath("PlayerSprite")
_hit_delay = 2.0

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
texture = ExtResource("7_0vnl8")
region_rect = Rect2(1, 1, 100, 100)

[node name="Camera2D" type="Camera2D" parent="Player" node_paths=PackedStringArray("ui")]
zoom = Vector2(0.6, 0.6)
limit_left = -5000
limit_top = -5000
limit_right = 5000
limit_bottom = 5000
limit_smoothed = true
position_smoothing_speed = 10.0
editor_draw_limits = true
script = ExtResource("5_f8mkt")
ui = NodePath("../../UI")

[node name="PlayerShape" type="CollisionShape2D" parent="Player"]
position = Vector2(-6, 10)
shape = SubResource("CapsuleShape2D_xafwk")

[node name="AttackRange" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="AttackRangeShape" type="CollisionShape2D" parent="Player/AttackRange"]
shape = SubResource("CircleShape2D_6ucjn")
debug_color = Color(0.392157, 0.615686, 0.0235294, 0.0705882)

[node name="Weapon" type="Node2D" parent="Player" node_paths=PackedStringArray("player")]
script = ExtResource("6_hc7te")
player = NodePath("..")
force = 2000.0
rotation_speed_attack = 10.0
rotation_speed_retract = 5.0

[node name="WeaponSprite" type="Sprite2D" parent="Player/Weapon"]
z_index = 1
z_as_relative = false
position = Vector2(64, 0)
scale = Vector2(-1, 1)
texture = ExtResource("10_20rln")

[node name="WeaponAnimations" type="AnimationPlayer" parent="Player/Weapon/WeaponSprite"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_ps31q")
}

[node name="WeaponHitbox" type="Area2D" parent="Player/Weapon/WeaponSprite"]
collision_layer = 4
collision_mask = 2

[node name="Hilt" type="CollisionShape2D" parent="Player/Weapon/WeaponSprite/WeaponHitbox"]
position = Vector2(2.5, 1.5)
shape = SubResource("RectangleShape2D_tpuvh")
debug_color = Color(0.811765, 0, 0.137255, 0.419608)

[node name="Blade" type="CollisionShape2D" parent="Player/Weapon/WeaponSprite/WeaponHitbox"]
position = Vector2(-9, -57)
shape = SubResource("RectangleShape2D_qrhkh")
debug_color = Color(0.760784, 0, 0.196078, 0.419608)

[node name="Smear" type="Sprite2D" parent="Player/Weapon/WeaponSprite"]
self_modulate = Color(1, 1, 1, 0)
z_index = -1
position = Vector2(23, 0)
rotation = 1.5708
scale = Vector2(-1, 1)
texture = ExtResource("11_f5ox6")
flip_h = true

[node name="AttackTimer" type="ProgressBar" parent="Player"]
offset_left = -39.0
offset_top = 75.0
offset_right = 39.0
offset_bottom = 102.0

[node name="SpawnerA" type="Node2D" parent="." node_paths=PackedStringArray("_player", "_game_time")]
position = Vector2(-2764, -2046)
scale = Vector2(2.02516, 2.15722)
script = ExtResource("10_m8a57")
_player = NodePath("../Player")
_game_time = NodePath("../UI/GameTime")
_spawn_delay = 5.0
_easy_enemy = ExtResource("12_tqki8")
_hard_enemy = ExtResource("10_mbw4p")
_boss_enemy = ExtResource("11_ngcgn")

[node name="Area" type="Area2D" parent="SpawnerA"]

[node name="Shape" type="CollisionShape2D" parent="SpawnerA/Area"]
position = Vector2(77.0768, -156.693)
shape = SubResource("RectangleShape2D_5ecaa")
debug_color = Color(0.85098, 0.635294, 0, 0.12549)

[node name="SpawnerB" type="Node2D" parent="." node_paths=PackedStringArray("_player", "_game_time")]
position = Vector2(2699, -2033)
scale = Vector2(2.02516, 2.15722)
script = ExtResource("10_m8a57")
_player = NodePath("../Player")
_game_time = NodePath("../UI/GameTime")
_spawn_delay = 5.0
_easy_enemy = ExtResource("10_odwr6")
_hard_enemy = ExtResource("10_mbw4p")
_boss_enemy = ExtResource("11_ngcgn")

[node name="Area" type="Area2D" parent="SpawnerB"]

[node name="Shape" type="CollisionShape2D" parent="SpawnerB/Area"]
position = Vector2(-29.2255, -142.796)
shape = SubResource("RectangleShape2D_2xpk6")
debug_color = Color(0.85098, 0.635294, 0, 0.12549)

[node name="SpawnerC" type="Node2D" parent="." node_paths=PackedStringArray("_player", "_game_time")]
position = Vector2(-2833, 2041)
scale = Vector2(2.02516, 2.15722)
script = ExtResource("10_m8a57")
_player = NodePath("../Player")
_game_time = NodePath("../UI/GameTime")
_spawn_delay = 5.0
_easy_enemy = ExtResource("10_odwr6")
_hard_enemy = ExtResource("10_mbw4p")
_boss_enemy = ExtResource("11_ngcgn")

[node name="Area" type="Area2D" parent="SpawnerC"]

[node name="Shape" type="CollisionShape2D" parent="SpawnerC/Area"]
position = Vector2(115.546, 180.103)
shape = SubResource("RectangleShape2D_6fmx8")
debug_color = Color(0.85098, 0.635294, 0, 0.12549)

[node name="SpawnerD" type="Node2D" parent="." node_paths=PackedStringArray("_player", "_game_time")]
position = Vector2(2699, 2147)
scale = Vector2(2.02516, 2.15722)
script = ExtResource("10_m8a57")
_player = NodePath("../Player")
_game_time = NodePath("../UI/GameTime")
_spawn_delay = 5.0
_easy_enemy = ExtResource("12_tqki8")
_hard_enemy = ExtResource("10_mbw4p")
_boss_enemy = ExtResource("11_ngcgn")

[node name="Area" type="Area2D" parent="SpawnerD"]

[node name="Shape" type="CollisionShape2D" parent="SpawnerD/Area"]
position = Vector2(-17.569, 158.094)
shape = SubResource("RectangleShape2D_2e4q1")
debug_color = Color(0.85098, 0.635294, 0, 0.12549)

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(-4841, -145)
shape = SubResource("RectangleShape2D_q47f4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(556.499, -4791)
rotation = 1.5708
shape = SubResource("RectangleShape2D_m67i8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2(4987, -149)
shape = SubResource("RectangleShape2D_q47f4")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2(624, 4745)
rotation = 1.5708
shape = SubResource("RectangleShape2D_q47f4")

[connection signal="pressed" from="UI/GameOver/Quit" to="GameState" method="quit"]
[connection signal="pressed" from="UI/GameOver/Retry" to="GameState" method="retry"]
[connection signal="player_died" from="Player" to="GameState" method="_on_player_died"]
[connection signal="body_entered" from="Player/Weapon/WeaponSprite/WeaponHitbox" to="Player/Weapon" method="_on_enemy_hit"]
[connection signal="enemy_died" from="SpawnerA" to="UI/ScoreLabel/ScoreValue" method="_on_spawner_enemy_died"]
[connection signal="body_entered" from="SpawnerA/Area" to="SpawnerA" method="_on_body_entered" flags=18]
[connection signal="body_exited" from="SpawnerA/Area" to="SpawnerA" method="_on_body_exited" flags=18]
[connection signal="enemy_died" from="SpawnerB" to="UI/ScoreLabel/ScoreValue" method="_on_spawner_enemy_died"]
[connection signal="body_entered" from="SpawnerB/Area" to="SpawnerB" method="_on_body_entered" flags=18]
[connection signal="body_exited" from="SpawnerB/Area" to="SpawnerB" method="_on_body_exited" flags=18]
[connection signal="enemy_died" from="SpawnerC" to="UI/ScoreLabel/ScoreValue" method="_on_spawner_enemy_died"]
[connection signal="body_entered" from="SpawnerC/Area" to="SpawnerC" method="_on_body_entered" flags=18]
[connection signal="body_exited" from="SpawnerC/Area" to="SpawnerC" method="_on_body_exited" flags=18]
[connection signal="enemy_died" from="SpawnerD" to="UI/ScoreLabel/ScoreValue" method="_on_spawner_enemy_died"]
[connection signal="body_entered" from="SpawnerD/Area" to="SpawnerD" method="_on_body_entered" flags=18]
[connection signal="body_exited" from="SpawnerD/Area" to="SpawnerD" method="_on_body_exited" flags=18]
